// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders collectly with children 1`] = `
<div
  className="jsx-271807279 page"
>
  <title
    className="jsx-271807279"
  >
    サンプルブログ
  </title>
  <link
    className="jsx-271807279"
    href="/favicon.ico"
    rel="icon"
  />
  <header
    className="jsx-271807279"
  >
    <h1
      className="jsx-271807279 site-title"
    >
      <a
        href="/"
      >
        サンプルブログ
      </a>
    </h1>
  </header>
  <main
    className="jsx-271807279"
  >
    <div
      className="jsx-271807279 page-main"
    >
      <div>
        <span>
          Hello World
        </span>
      </div>
    </div>
  </main>
  <footer
    className="jsx-271807279"
  >
    © 
    サンプルブログ
  </footer>
</div>
`;

exports[`Layout renders collectly with title 1`] = `
<div
  className="jsx-271807279 page"
>
  <title
    className="jsx-271807279"
  >
    ページタイトル | サンプルブログ
  </title>
  <link
    className="jsx-271807279"
    href="/favicon.ico"
    rel="icon"
  />
  <header
    className="jsx-271807279"
  >
    <h1
      className="jsx-271807279 site-title"
    >
      <a
        href="/"
      >
        サンプルブログ
      </a>
    </h1>
  </header>
  <main
    className="jsx-271807279"
  >
    <h1
      className="jsx-271807279 page-title"
    >
      ページタイトル
    </h1>
    <div
      className="jsx-271807279 page-main"
    />
  </main>
  <footer
    className="jsx-271807279"
  >
    © 
    サンプルブログ
  </footer>
</div>
`;
